# rust-webrtc-gstreamer

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  package-lock.json  package.json  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: app.rs  logger.rs  macros.rs  main.rs  signalling.rs  types.rs
src/app/: mod.rs  stats.rs  types.rs
web/: build.js  helpers.ts  index.html  index.ts  package-lock.json  package.json
web/src/: helpers.ts  index.ts
