[package]
name = "rust-webrtc-gstreamer"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.36"
futures = "0.3.8"
glib = "0.10.3"
gst = { package = "gstreamer", version = "0.16.5", features = ["v1_18"] }
gst-audio = { package = "gstreamer-audio", version = "0.16.5", features = ["v1_18"] }
gst-rtp = { package = "gstreamer-rtp", version = "0.16.5", features = ["v1_18"] }
gst-sdp = { package = "gstreamer-sdp", version = "0.16.6", features = ["v1_18"] }
gst-video = { package = "gstreamer-video", version = "0.16.6", features = ["v1_18"] }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.16.5", features = ["v1_18"] }
num_cpus = "1.13.0"
parceljs = { git = "https://github.com/SpiralP/rust-parceljs.git", features = ["warp"] }
paw = "1.0.0"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
structopt = { version = "0.3.21", features = ["paw"] }
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
warp = "0.2.5"

[build-dependencies]
parceljs-builder = { git = "https://github.com/SpiralP/rust-parceljs.git" }
