[package]
name = "rust-webrtc-gstreamer"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
futures = "0.3"
glib = "0.10"
gst = { package = "gstreamer", version = "0.16", features = ["v1_18"] }
gst-sdp = { package = "gstreamer-sdp", version = "0.16", features = ["v1_18"] }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.16", features = ["v1_18"] }
num_cpus = "1"
parceljs = { git = "https://github.com/SpiralP/rust-parceljs.git", features = ["warp"] }
paw = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = { version = "0.3", features = ["paw"] }
# upgrade when warp upgrades
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
warp = "0.2"

[target.'cfg(target_os="windows")'.dependencies]
ansi_term = "0.12"


[build-dependencies]
parceljs-builder = { git = "https://github.com/SpiralP/rust-parceljs.git" }
