[package]
name = "webrtc-gstreamer"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
futures = "0.3"
glib = "0.17"
gstreamer = "0.20"
gstreamer-sdp = "0.20"
gstreamer-webrtc = "0.20"
nodejs-bundler = { git = "https://github.com/SpiralP/rust-nodejs-bundler.git", features = ["warp"] }
num_cpus = "1"
paw = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
speedometer = "0.2"
structopt = { version = "0.3", features = ["paw"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = "0.3"

[target.'cfg(target_os="windows")'.dependencies]
ansi_term = "0.12"


[build-dependencies]
nodejs-bundler-codegen = { git = "https://github.com/SpiralP/rust-nodejs-bundler.git" }
